<resources>
    <string name="app_name">SwissO</string>

    <string name="all_events">Alle Events</string>
    <string name="favorites">Favoriten</string>
    <string name="details">Details</string>

    <string name="okay">OK</string>
    <string name="cancel">Abbrechen</string>

    <!-- Profil -->
    <string name="profil">Profil</string>
    <string name="vorname">Vorname</string>
    <string name="name">Name</string>
    <string name="nachname">Nachname</string>
    <string name="club_add">Club hinzufügen</string>
    <string name="friend_add">Freund hinzufügen</string>
    <string name="kat_add">Kategorie hinzufügen</string>
    <string name="si_number">SI-Nummer</string>
    <string name="category">Kategorie</string>
    <string name="new_friend">Neuer Freund</string>
    <string name="new_club">Neuer Club</string>
    <string name="new_kat">Neue Kategorie</string>

    <string name="friends">Freunde</string>
    <string name="club">Club</string>
    <string name="alle">Alle</string>

    <string name="ausschreibung">Ausschreibung</string>
    <string name="weisungen">Weisungen</string>
    <string name="anmeldung">Anmeldung</string>
    <string name="mutation">Mutation</string>
    <string name="wkz">WKZ</string>
    <string name="startlist">Startliste</string>
    <string name="liveresult">Live Resultate</string>
    <string name="rangliste">Rangliste</string>
    <string name="teilnehmer">Teilnehmer</string>
    <string name="kalender">Kalendereintrag</string>

    <string name="schnellfilter">Schnellfilter</string>
    <string name="laeufersuche">Läufersuche</string>

    <!--Content descriptions-->
    <string name="set_fav">Als Favorit markieren</string>
    <string name="remove_fav">Favorit entfernen</string>
    <string name="open_details">Details öffnen</string>

    <!--Menu-->
    <string name="refresh">Refresh</string>
    <string name="openinbrowser">In Browser öffnen</string>
    <string name="no_friends">Keiner deiner Freunde in Liste gefunden</string>
    <string name="no_clubs">Keiner deiner Clubs in Liste gefunden</string>
    <string name="no_kat">Keine Läufer in dieser Kategorie gefunden</string>
    <string name="no_list">Liste (noch) nicht verfügbar</string>
    <string name="listinbrowser">Liste nur online verfügbar</string>

    <string name="no_fav">Noch keine Favoriten</string>
    <string name="showallevents">Alle Events anzeigen</string>

    <string name="clearsearch">Suche zurücksetzen</string>
    <string name="settings">Einstellungen</string>

    <string name="sortierung">Sortierung</string>
    <string name="absteigend">Absteigend</string>
    <string name="aufsteigend">Aufsteigend</string>

    <string name="newmessages">Neue Nachricht</string>
    <string name="gelesen">Weg damit!</string>

    <string name="nointernet">Server nicht erreichbar</string>

    <string name="account_name">SwissO Kalender</string>
    <string name="account_type">ch.swisso.local_calendar</string>
    <string name="cal_fav">SwissO Favoriten</string>
    <string name="cal_all">SwissO Alle Events</string>

    <string name="postenfehlt">Po. fehl.</string>
    <string name="aufgegeben">aufgeg.</string>
    <string name="nichtklassiert">n. kl.</string>
    <string name="postenfalsch">Po. fal.</string>
    <string name="disqet">Disqu.</string>
    <string name="dns">n. gestar.</string>
    <string name="ueberzeit">Überz.</string>
    <string name="aK">a.K.</string>


    <string name="region">Region</string>
    <string name="karte">Karte</string>
    <string name="event">Event</string>

    <string name="open_in_swisso_app">In SwissO App öffnen:</string>
    <string name="startnummer">Startnummer</string>
    <string name="rang">Rang</string>

    <string name="cal_permission_denied">Events werden nicht im Kalender angezeigt</string>

    <string name="empty" />

    <string-array name="sorting_startlist_entires">
        <item>Startnummer</item>
        <item>Name</item>
        <item>Kategorie</item>
        <item>Startzeit</item>
    </string-array>

    <string-array name="sorting_ranglist_entires">
        <item>Rang</item>
        <item>Name</item>
        <item>Kategorie</item>
        <item>Zielzeit</item>
    </string-array>

</resources>