<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_select_home"
        android:title="@string/overview" />

    <item
        android:id="@+id/navigation_details"
        android:icon="@drawable/ic_select_info"
        android:title="@string/details" />

    <item
        android:id="@+id/navigation_startlist"
        android:icon="@drawable/ic_baseline_format_list_bulleted"
        android:title="@string/startlist" />

    <item
        android:id="@+id/navigation_liveresult"
        android:icon="@drawable/ic_baseline_format_list_numbered"
        android:title="@string/rangliste" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_select_person"
        android:title="@string/profil" />
</menu>