<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_clearsearch"
        android:icon="@drawable/ic_baseline_close"
        android:title="@string/clearsearch"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_baseline_refresh"
        android:title="@string/refresh"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_browser"
        android:icon="@drawable/ic_baseline_open_in_browser"
        android:title="@string/openinbrowser"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sorting"
        android:icon="@drawable/ic_baseline_sort"
        android:title="@string/sortierung"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />
</menu>